--- a/src/MindTheMango.Mind.Common.IoC/MindTheMango.Mind.Common.IoC.csproj
+++ b/src/MindTheMango.Mind.Common.IoC/MindTheMango.Mind.Common.IoC.csproj
@@ -18,4 +18,8 @@
         <PackageReference Include="Serilog.Sinks.Elasticsearch" Version="7.1.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\MindTheMango.Mind.Common.Identity\MindTheMango.Mind.Common.Identity.csproj" />
+    </ItemGroup>
+
 </Project>
