Referenced Domain DI from Common.IoC

--- a/src/MindTheMango.Mind.Common.IoC/MindTheMango.Mind.Common.IoC.csproj
+++ b/src/MindTheMango.Mind.Common.IoC/MindTheMango.Mind.Common.IoC.csproj
@@ -20,6 +20,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\MindTheMango.Mind.Common.Identity\MindTheMango.Mind.Common.Identity.csproj" />
+      <ProjectReference Include="..\MindTheMango.Mind.Domain\MindTheMango.Mind.Domain.csproj" />
       <ProjectReference Include="..\MindTheMango.Mind.Persistence.Implementation\MindTheMango.Mind.Persistence.Implementation.csproj" />
     </ItemGroup>
 
